# hardness-spin-dynamics

./: .gitignore  CMakeLists.txt  README.rst  setup.py
python_src/: xx_time_evol_exact.py
src/: binding.cpp  ham_utils.hpp  ising_at_log_time.cpp  ising_time_evol.cpp  xx_at_log_time_trotter.cpp  xx_time_evol_exact.cpp  xx_time_evol_trotter.cpp
